[metadata]
name = matmap
version = attr: matmap.__version__
description = MatMap: A Modular, Automatable, Tunable Mapper for Accelerator Programming
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/gdinh/matmap
;author = UCB SLICE
;author_email = TBD
maintainer = Grace Dinh
maintainer_email = dinh@berkeley.edu
license = BSD 3-Clause License
keywords = scheduling, language, performance, dsl, autotuning
python_required =
    >=3.9, <4
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Software Development
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
include_package_data = True

[options]
packages = find:
package_dir =
    =src
install_requires =
    exo-lang>=0.0.2
    cvxpy>=1.0.0

[options.packages.find]
where = src